[metadata]
name = dl-plus-extractor-un1def-goodgame
version = attr: dl_plus.extractors.un1def.goodgame.__version__
description = A dl-plus extractor plugin for GoodGame streaming platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/un-def/dl-plus-extractor-un1def-goodgame
author = un.def
author_email = me@undef.im
license = MIT
license_file = LICENSE

[options]
zip_safe = false
python_requires = >=3.6
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src

[options.extras_require]
dl_plus = dl-plus >= 0.3
